# infer-file-type

./: .gitignore  Cargo.toml  README.md  log4rs.yml
src/: main.rs
