[package]
name = "infer-file-type"
description = "infer file type and add file extensions accordingly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
infer = "0.15.0"
log = "0.4.19"
log4rs = "1.2.0"
walkdir = "2.3.3"
